[project]
name = "nebula-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Stadnik Andrii", email = "stadnikandriy1@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "bertopic>=0.16.4",
    "fastapi>=0.115.8",
    "llvmlite>=0.44.0",
    "loguru>=0.7.3",
    "nltk>=3.9.1",
    "polars>=1.22.0",
    "pyarrow>=19.0.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.0",
    "vl-convert-python>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
